[fix 3317] Resize product icons on mobile.

--- a/kitsune/sumo/static/sumo/less/mobile/main.less
+++ b/kitsune/sumo/static/sumo/less/mobile/main.less
@@ -404,8 +404,8 @@ input[type="submit"]:visited {
 }
 
 .logo-sprite {
-  height: 48px;
-  width: 48px;
+  height: auto;
+  width: 120px;
 }
 
 .header-overlay {
